--- a/Frontend/src/app/components/application/application.component.html
+++ b/Frontend/src/app/components/application/application.component.html
@@ -2,7 +2,7 @@
   <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
     <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
       <tr>
-        <th scope="col" class="px-6 py-3">Num de Petición</th>
+        <th scope="col" class="px-6 py-3">Num Request</th>
         <th scope="col" class="px-6 py-3">State</th>
         <th scope="col" class="px-6 py-3">Transmitter</th>
         <th scope="col" class="px-6 py-3">Receiver</th>
