--- a/Frontend/src/app/components/contact/contact.component.html
+++ b/Frontend/src/app/components/contact/contact.component.html
@@ -1,13 +1,13 @@
 <div class="py-12">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="lg:text-center">
-      <h2 class="text-base text-white font-semibold tracking-wide uppercase">Ubicación</h2>
+      <h2 class="text-base text-white font-semibold tracking-wide uppercase">Location</h2>
       <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-        Nuestra Web
+        Our Website
       </p>
       <p class="mt-4 max-w-2xl text-xl text-white lg:mx-auto">
-        Nuestra web esta abierta a sugerencias y estamos dispuestos a escuchar a nuestros clientes, los datos de
-        atencion al cliente se encuentran a continuacion.
+        Our website is open to suggestions, and we are willing to listen to our customers. Customer service data is
+        listed below.
       </p>
     </div>
 
@@ -16,7 +16,7 @@
         <div class="flex">
           <div class="flex-shrink-0">
             <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
-              <!-- Icono: globo -->
+              <!-- Icon: globe -->
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -26,11 +26,11 @@
           </div>
           <div class="ml-4">
             <dt class="text-lg leading-6 font-medium text-gray-900">
-              Dirección
+              Address
             </dt>
             <dd class="mt-2 text-base text-white">
-              123 Calle Principal, Suite 100<br>
-              Pueblo, EE. UU. 12345
+              123 Main Street, Suite 100<br>
+              Town, USA 12345
             </dd>
           </div>
         </div>
@@ -38,7 +38,7 @@
         <div class="flex">
           <div class="flex-shrink-0">
             <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
-              <!-- Icono: teléfono -->
+              <!-- Icon: phone -->
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -48,7 +48,7 @@
           </div>
           <div class="ml-4">
             <dt class="text-lg leading-6 font-medium text-gray-900">
-              Atencion al Cliente
+              Customer Service
             </dt>
             <dd class="mt-2 text-base text-white">
               +34 258 879 147
@@ -59,7 +59,7 @@
         <div class="flex">
           <div class="flex-shrink-0">
             <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
-              <!-- Icono: correo -->
+              <!-- Icon: email -->
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -69,18 +69,17 @@
           </div>
           <div class="ml-4">
             <dt class="text-lg leading-6 font-medium text-gray-900">
-              Correo Electrónico
+              Email
             </dt>
             <dd class="mt-2 text-base text-white">
               info.com
             </dd>
           </div>
         </div>
-
         <div class="flex">
           <div class="flex-shrink-0">
             <div class="flex items-center justify-center h-12 w-12 rounded-md bg-indigo-500 text-white">
-              <!-- Icono: reloj -->
+              <!-- Icon: clock -->
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="w-6 h-6">
                 <path stroke-linecap="round" stroke-linejoin="round"
@@ -90,15 +89,16 @@
           </div>
           <div class="ml-4">
             <dt class="text-lg leading-6 font-medium text-gray-900">
-              Horario de Atencion al Cliente
+              Customer Service Hours
             </dt>
             <dd class="mt-2 text-base text-white">
-              Lunes - Viernes: 9am a 11am<br>
-              Sábado: 10am a 12am<br>
-              Domingo: 12pm a 14pm
+              Monday - Friday: 9am to 11am<br>
+              Saturday: 10am to 12am<br>
+              Sunday: 12pm to 2pm
             </dd>
           </div>
         </div>
+
       </dl>
     </div>
   </div>
