--- a/Frontend/src/app/components/programing-language-management/programing-language-management.component.html
+++ b/Frontend/src/app/components/programing-language-management/programing-language-management.component.html
@@ -4,8 +4,8 @@
             <tr>
                 <th scope="col" class="px-6 py-3">Id</th>
                 <th scope="col" class="px-6 py-3">Name</th>
-                <th scope="col" class="px-6 py-3">Editar</th>
-                <th scope="col" class="px-6 py-3">Eliminar</th>
+                <th scope="col" class="px-6 py-3">Edit</th>
+                <th scope="col" class="px-6 py-3">Delete</th>
             </tr>
         </thead>
         <tbody>
