--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -14,26 +14,22 @@
 <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="/home" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">CodeMasterMentors</span>
+      <img src="../assets/Logo.png" class="h-8" alt="Logo">
+      <span [ngClass]="{'hidden': isNavbarCollapsed}"
+        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
     </a>
     <div class="flex md:order-2 rtl:space-x-reverse">
-      <!-- Mostrar botones de inicio de sesión y registro solo si el usuario no está autenticado -->
-      <a *ngIf="!isLoggedIn" routerLink="/condiciones" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
+      <a *ngIf="!isLoggedIn" routerLink="/condiciones"
+        class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
         ¿Quieres unirte a nosotros?
       </a>
-
-      <!-- Mostrar botones de inicio de sesión y registro solo si el usuario no está autenticado -->
       <a *ngIf="!isLoggedIn" routerLink="/login" class="ml-2">
         <button type="button"
           class="relative inline-flex items-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-500 to-pink-500 group-hover:from-purple-500 group-hover:to-pink-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800">
           <span
-            class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
-            Login
-          </span>
+            class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">Login</span>
         </button>
       </a>
-
       <a *ngIf="isLoggedIn" class="ml-2 relative" (click)="toggleDropdown()">
         <img *ngIf="user && user.img" [src]="user.img" alt="User Image" class="h-8 w-8 rounded-full">
         <div *ngIf="showDropdown"
@@ -48,28 +44,22 @@
           <a *ngIf="isLoggedIn && user.role_id === 2" [routerLink]="['/mis-anuncios', userId]"
             class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Mis
             Anuncios</a>
-          <a *ngIf="isLoggedIn && user.role_id === 2" [routerLink]="['/application']"
-            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Peticiones de
-            Clases</a>
-          <a *ngIf="isLoggedIn && user.role_id === 2" [routerLink]="['/recibo']"
-            class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Mis
-            Clases</a>
           <a *ngIf="isLoggedIn" routerLink="/logout" class="ml-2" (click)="logout()">
             <button type="button"
               class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Logout</button>
           </a>
         </div>
       </a>
-      <!-- Boton util no borrar -->
-      <button data-collapse-toggle="navbar-sticky" type="button"
+      <button type="button"
         class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-        aria-controls="navbar-sticky" aria-expanded="false">
+        aria-controls="navbar-sticky" aria-expanded="false" (click)="toggleNavbar()">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+        </svg>
       </button>
-
     </div>
-
-    <!-- Lista de enlaces de navegación (puede que desees ajustarlos según tus necesidades) -->
-    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
+      [ngClass]="{'hidden': isNavbarCollapsed}" id="navbar-sticky">
       <ul
         class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
@@ -117,145 +107,35 @@
 <router-outlet></router-outlet>
 
 
-<div *ngIf="showFooter" class="relative mt-16 dark:bg-gray-900">
-  <svg class="absolute top-0 w-full h-6 -mt-5 sm:-mt-10 sm:h-16 text-gray-900" preserveAspectRatio="none"
-    viewBox="0 0 1440 54">
-    <path fill="currentColor"
-      d="M0 22L120 16.7C240 11 480 1.00001 720 0.700012C960 1.00001 1200 11 1320 16.7L1440 22V54H1320C1200 54 960 54 720 54C480 54 240 54 120 54H0V22Z">
-    </path>
-  </svg>
-  <div class="px-4 pt-12 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
-    <div class="grid gap-16 row-gap-10 mb-8 lg:grid-cols-6">
-      <div class="md:max-w-md lg:col-span-2">
-        <a href="/" aria-label="Go home" title="Company" class="inline-flex items-center">
-          <svg class="w-8 text-white" viewBox="0 0 24 24" stroke-linejoin="round" stroke-width="2"
-            stroke-linecap="round" stroke-miterlimit="10" stroke="currentColor" fill="none">
-            <rect x="3" y="1" width="7" height="12"></rect>
-            <rect x="3" y="17" width="7" height="6"></rect>
-            <rect x="14" y="1" width="7" height="6"></rect>
-            <rect x="14" y="11" width="7" height="12"></rect>
-          </svg>
-          <span class="ml-2 text-xl font-bold tracking-wide text-white uppercase">CodeMasterMentors</span>
-        </a>
-        <div class="mt-4 lg:max-w-sm">
-          <p class="text-sm text-white">
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-            aperiam.
-          </p>
-          <p class="mt-4 text-sm text-white">
-            Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-          </p>
-        </div>
-      </div>
-      <div class="grid grid-cols-2 gap-5 row-gap-8 lg:col-span-4 md:grid-cols-4">
-        <div>
-          <p class="font-semibold tracking-wide text-white">
-            Category
-          </p>
-          <ul class="mt-2 space-y-2">
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">News</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">World</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Games</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">References</a>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <p class="font-semibold tracking-wide text-white">Cherry</p>
-          <ul class="mt-2 space-y-2">
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Web</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">eCommerce</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Business</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Entertainment</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Portfolio</a>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <p class="font-semibold tracking-wide text-white">Apples</p>
-          <ul class="mt-2 space-y-2">
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Media</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Brochure</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Nonprofit</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Educational</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Projects</a>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <p class="font-semibold tracking-wide text-white">
-            Business
-          </p>
-          <ul class="mt-2 space-y-2">
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Infopreneur</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Personal</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Wiki</a>
-            </li>
-            <li>
-              <a href="/" class="transition-colors duration-300 text-white hover:text-teal-accent-400">Forum</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+
+
+
+
+<!-- Footer -->
+<footer class="bg-white rounded-lg shadow dark:bg-gray-900 m-4">
+  <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+    <div class="sm:flex sm:items-center sm:justify-between">
+      <a href="https://slimedungeon.es/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+        <img src="../assets/Logo.png" class="h-8" alt="Flowbite Logo" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">CodeMasterMentors</span>
+      </a>
+      <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
+        <li>
+          <a href="#" class="hover:underline me-4 md:me-6">About</a>
+        </li>
+        <li>
+          <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+        </li>
+        <li>
+          <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+        </li>
+        <li>
+          <a href="#" class="hover:underline">Contact</a>
+        </li>
+      </ul>
     </div>
-    <div class="flex flex-col justify-between pt-5 pb-10 border-t border-deep-purple-accent-200 sm:flex-row">
-      <p class="text-sm text-gray-100">
-        © Copyright 2020 Lorem Inc. All rights reserved.
-      </p>
-      <div class="flex items-center mt-4 space-x-4 sm:mt-0">
-        <a href="/" class="transition-colors duration-300 text-deep-purple-100 hover:text-teal-accent-400">
-          <svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
-            <path
-              d="M24,4.6c-0.9,0.4-1.8,0.7-2.8,0.8c1-0.6,1.8-1.6,2.2-2.7c-1,0.6-2,1-3.1,1.2c-0.9-1-2.2-1.6-3.6-1.6 c-2.7,0-4.9,2.2-4.9,4.9c0,0.4,0,0.8,0.1,1.1C7.7,8.1,4.1,6.1,1.7,3.1C1.2,3.9,1,4.7,1,5.6c0,1.7,0.9,3.2,2.2,4.1 C2.4,9.7,1.6,9.5,1,9.1c0,0,0,0,0,0.1c0,2.4,1.7,4.4,3.9,4.8c-0.4,0.1-0.8,0.2-1.3,0.2c-0.3,0-0.6,0-0.9-0.1c0.6,2,2.4,3.4,4.6,3.4 c-1.7,1.3-3.8,2.1-6.1,2.1c-0.4,0-0.8,0-1.2-0.1c2.2,1.4,4.8,2.2,7.5,2.2c9.1,0,14-7.5,14-14c0-0.2,0-0.4,0-0.6 C22.5,6.4,23.3,5.5,24,4.6z">
-            </path>
-          </svg>
-        </a>
-        <a href="/" class="transition-colors duration-300 text-deep-purple-100 hover:text-teal-accent-400">
-          <svg viewBox="0 0 30 30" fill="currentColor" class="h-6">
-            <circle cx="15" cy="15" r="4"></circle>
-            <path
-              d="M19.999,3h-10C6.14,3,3,6.141,3,10.001v10C3,23.86,6.141,27,10.001,27h10C23.86,27,27,23.859,27,19.999v-10   C27,6.14,23.859,3,19.999,3z M15,21c-3.309,0-6-2.691-6-6s2.691-6,6-6s6,2.691,6,6S18.309,21,15,21z M22,9c-0.552,0-1-0.448-1-1   c0-0.552,0.448-1,1-1s1,0.448,1,1C23,8.552,22.552,9,22,9z">
-            </path>
-          </svg>
-        </a>
-        <a href="/" class="transition-colors duration-300 text-deep-purple-100 hover:text-teal-accent-400">
-          <svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
-            <path
-              d="M22,0H2C0.895,0,0,0.895,0,2v20c0,1.105,0.895,2,2,2h11v-9h-3v-4h3V8.413c0-3.1,1.893-4.788,4.659-4.788 c1.325,0,2.463,0.099,2.795,0.143v3.24l-1.918,0.001c-1.504,0-1.795,0.715-1.795,1.763V11h4.44l-1,4h-3.44v9H22c1.105,0,2-0.895,2-2 V2C24,0.895,23.105,0,22,0z">
-            </path>
-          </svg>
-        </a>
-      </div>
-    </div>
+    <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+    <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a
+        href="https://slimedungeon.es/" class="hover:underline">CodeMasterMentors</a>. All Rights Reserved.</span>
   </div>
-</div>
+</footer>
