--- a/Frontend/src/app/components/aboutus/aboutus.component.html
+++ b/Frontend/src/app/components/aboutus/aboutus.component.html
@@ -3,18 +3,17 @@
   <section id="features" class="relative block px-6 py-10 md:py-20 md:px-10">
     <div class="relative mx-auto max-w-5xl text-center">
       <span class="text-gray-400 my-3 flex items-center justify-center font-medium uppercase tracking-wider">
-        ¿Por qué elegirnos?
+        Why Choose Us?
       </span>
       <h2
         class="block w-full bg-gradient-to-b from-white to-gray-400 bg-clip-text font-bold text-transparent text-3xl sm:text-4xl">
-        Construye una relacion de tutorías que tus estudiantes adoren
+        Build a Tutoring Relationship Your Students Will Love
       </h2>
       <p
         class="mx-auto my-4 w-full max-w-xl bg-transparent text-center font-medium leading-relaxed tracking-wide text-gray-400">
-        Únete a nuestra plataforma de tutorías
-        Conviértete en alumno o profesor y aprovecha al máximo nuestros servicios.
-        Nuestra plataforma te ofrece la flexibilidad de registrarte como alumno para recibir clases o como profesor para
-        impartirlas. Personaliza tu perfil y comienza a enseñar o aprender fácilmente"
+        Join our tutoring platform. Become a student or teacher and make the most of our services.
+        Our platform offers you the flexibility to register as a student to receive classes or as a teacher to
+        provide them. Customize your profile and start teaching or learning easily.
       </p>
     </div>
     <div class="relative mx-auto max-w-7xl z-10 grid grid-cols-1 gap-10 pt-14 sm:grid-cols-2 lg:grid-cols-3">
@@ -33,8 +32,7 @@
         </div>
         <h3 class="mt-6 text-gray-400">Customizable</h3>
         <p class="my-4 mb-0 font-normal leading-relaxed tracking-wide text-gray-400">Tailor your landing page's
-          look
-          and feel, from the color scheme to the font size, to the design of the page.
+          look and feel, from the color scheme to the font size, to the design of the page.
         </p>
       </div>
       <div class="rounded-md border border-neutral-800 bg-neutral-900/50 p-8 text-center shadow">
@@ -69,8 +67,7 @@
         </div>
         <h3 class="mt-6 text-gray-400">Fully Featured</h3>
         <p class="my-4 mb-0 font-normal leading-relaxed tracking-wide text-gray-400">
-          Everything you need to
-          succeed
+          Everything you need to succeed
           and launch your landing page, right out of the box. No need to install anything else.
         </p>
       </div>
