--- a/Frontend/src/app/components/add-programing-language/add-programing-language.component.html
+++ b/Frontend/src/app/components/add-programing-language/add-programing-language.component.html
@@ -14,7 +14,6 @@
       <!-- Other input fields... -->
 
       <!-- Submit button -->
-      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Guardar
-        Cambios</button>
+      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Save Changes</button>
     </form>
   </div>
