--- a/Frontend/src/app/components/advertisement-management/advertisement-management.component.html
+++ b/Frontend/src/app/components/advertisement-management/advertisement-management.component.html
@@ -2,24 +2,24 @@
   <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
     <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
       <tr>
-        <th scope="col" class="px-6 py-3">Profesor</th>
-        <th scope="col" class="px-6 py-3">Lenguaje</th>
-        <th scope="col" class="px-6 py-3">Titulo</th>
-        <th scope="col" class="px-6 py-3">Tipo de clase</th>
-        <th scope="col" class="px-6 py-3">Sobre el</th>
-        <th scope="col" class="px-6 py-3">Descripcion</th>
-        <th scope="col" class="px-6 py-3">Precio/hora</th>
-        <th scope="col" class="px-6 py-3">Disponibilidad</th>
-        <th scope="col" class="px-6 py-3">Experiencia</th>
-        <th scope="col" class="px-6 py-3">Editar</th>
-        <th scope="col" class="px-6 py-3">Eliminar</th>
+        <th scope="col" class="px-6 py-3">Teacher</th>
+        <th scope="col" class="px-6 py-3">Language</th>
+        <th scope="col" class="px-6 py-3">Title</th>
+        <th scope="col" class="px-6 py-3">Class Type</th>
+        <th scope="col" class="px-6 py-3">About Me</th>
+        <th scope="col" class="px-6 py-3">Description</th>
+        <th scope="col" class="px-6 py-3">Price/hour</th>
+        <th scope="col" class="px-6 py-3">Availability</th>
+        <th scope="col" class="px-6 py-3">Experience</th>
+        <th scope="col" class="px-6 py-3">Edit</th>
+        <th scope="col" class="px-6 py-3">Delete</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let advertisement of advertisements.data"
         class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-        <td class="px-6 py-4">{{advertisement.user_id}}</td>
-        <td class="px-6 py-4">{{ advertisement.programmingLanguage_id }}</td>
+        <td class="px-6 py-4">{{getUserName( advertisement.user_id)}}</td>
+        <td class="px-6 py-4">{{ getProgrammingName( advertisement.programmingLanguage_id) }}</td>
         <td class="px-6 py-4">{{ advertisement.title }}</td>
         <td class="px-6 py-4">{{ advertisement.class }}</td>
         <td class="px-6 py-4">{{ advertisement.about_me }}</td>
@@ -27,7 +27,8 @@
         <td class="px-6 py-4">{{ advertisement.price_hour }}</td>
         <td class="px-6 py-4">{{ advertisement.disponibility }}</td>
         <td class="px-6 py-4">{{ advertisement.experience }}</td>
-        <td class="px-6 py-4"> <a [routerLink]="['/editAdd']" [queryParams]="{ userId: advertisements.id }" class="ml-2">
+        <td class="px-6 py-4"> <a [routerLink]="['/editAdd']" [queryParams]="{ userId: advertisements.id }"
+            class="ml-2">
             <button type="button"
               class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">Edit</button>
           </a></td>
