--- a/Frontend/src/app/components/favourite-list/favourite-list.component.html
+++ b/Frontend/src/app/components/favourite-list/favourite-list.component.html
@@ -1,34 +1,44 @@
-<h2 class="block w-full bg-gradient-to-b text-center from-white to-gray-400 bg-clip-text font-bold text-transparent text-3xl sm:text-4xl">Lista de Favoritos</h2>
+<h2 class="block w-full text-center text-3xl sm:text-4xl font-bold mb-6 leading-tight text-gray-900 dark:text-white">
+  Favorite List
+</h2>
+
 <div class="p-4 max-w-lg mx-auto mt-24">
   <ng-container *ngFor="let favouriteList of favouriteLists.data">
-    <details class="mb-2">
-      <summary class="bg-gray-200 p-4 rounded-lg cursor-pointer shadow-md mb-4 relative">
-        <span class="font-semibold">{{ favouriteList.name }}</span>
-        <div class="absolute top-0 right-0 flex items-center">
-          <button class="ml-2 text-green-500" (click)="openEditModal(favouriteList)">Editar</button>
-          <button class="ml-2 text-red-500" (click)="deleteList(favouriteList)">Borrar</button>
-        </div>
-      </summary>
-      <ul class="ml-8 space-y-4">
-        <ng-container *ngFor="let advertisementList of advertisementFavouriteLists.data">
-          <ng-container *ngIf="advertisementList.favouriteList_id === favouriteList.id">
-            <li>
-              <details class="mb-2">
-                <summary class="bg-gray-100 p-3 rounded-lg cursor-pointer shadow flex items-center">
-                  <span class="font-semibold">{{ getAdvertisementTitle(advertisementList.advertisement_id) }}</span>
+    <ng-container *ngIf="favouriteList.user_id === currentUserID">
+      <details class="mb-2">
+        <summary class="bg-gray-200 dark:bg-gray-800 p-4 rounded-lg cursor-pointer shadow-md mb-4 relative">
+          <span class="font-semibold text-gray-900 dark:text-gray-100">{{ favouriteList.name }}</span>
+          <div class="absolute top-0 right-0 flex items-center">
+            <button class="ml-2 text-green-500 hover:text-green-700 dark:text-green-400 dark:hover:text-green-600"
+              (click)="openEditModal(favouriteList)">
+              <i class="fas fa-edit"></i>
+            </button>
+            <button class="ml-2 text-red-500 hover:text-red-700 dark:text-red-400 dark:hover:text-red-600"
+              (click)="deleteList(favouriteList)">
+              <i class="fas fa-trash-alt"></i>
+            </button>
+          </div>
+        </summary>
+        <ul class="ml-8 space-y-4">
+          <ng-container *ngFor="let advertisementList of advertisementFavouriteLists.data">
+            <ng-container *ngIf="advertisementList.favouriteList_id === favouriteList.id">
+              <li class="flex items-center justify-between bg-gray-100 dark:bg-gray-700 p-3 rounded-lg shadow mb-2">
+                <div class="flex items-center">
+                  <span class="font-semibold text-gray-900 dark:text-gray-100">{{
+                    getAdvertisementTitle(advertisementList.advertisement_id) }}</span>
                   <img *ngIf="advertisementList.imgUrl" [src]="advertisementList.imgUrl" alt="Advertisement Image"
                     class="ml-2 h-8 w-8 rounded-full">
-                </summary>
-                <div class="bg-white p-4">
-                  <button class="ml-2 text-red-500"
-                    (click)="deleteAdvertisementFavourite(advertisementList)">Borrar</button>
                 </div>
-              </details>
-            </li>
+                <button class="ml-2 text-red-500 hover:text-red-700 dark:text-red-400 dark:hover:text-red-600"
+                  (click)="deleteAdvertisementFavourite(advertisementList)">
+                  <i class="fas fa-trash-alt"></i>
+                </button>
+              </li>
+            </ng-container>
           </ng-container>
-        </ng-container>
-      </ul>
-    </details>
+        </ul>
+      </details>
+    </ng-container>
   </ng-container>
 </div>
 
@@ -42,27 +52,25 @@
     <!-- Modal panel -->
     <br><br><br><br>
     <div
-      class="w-full inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
+      class="w-full inline-block align-bottom bg-white dark:bg-gray-800 rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
       role="dialog" aria-modal="true" aria-labelledby="modal-headline">
-      <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+      <div class="bg-white dark:bg-gray-800 px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
         <!-- Modal content -->
-        <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">Editar Lista de Favoritos</h3>
+        <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-100" id="modal-headline">Edit Favorite
+          List</h3>
         <div class="mt-2">
-          <input type="text" [(ngModel)]="editedListName" placeholder="Nuevo nombre de lista"
-            class="mt-2 p-2 border border-gray-300 rounded-md w-full focus:outline-none focus:ring focus:border-blue-500">
+          <input type="text" [(ngModel)]="editedListName" placeholder="New List Name"
+            class="mt-2 p-2 border border-gray-300 dark:border-gray-600 rounded-md w-full focus:outline-none focus:ring focus:border-blue-500 dark:focus:border-blue-400">
         </div>
       </div>
-      <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+      <div class="bg-gray-50 dark:bg-gray-700 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
         <!-- Save button -->
         <button (click)="saveEditedList()" type="button"
-          class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm">
-          Guardar </button>
+          class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 dark:bg-blue-400 dark:hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm">Save</button>
         <!-- Cancel button -->
         <button (click)="closeEditModal()" type="button"
-          class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-200 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
-          Cancelar </button>
+          class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 dark:border-gray-600 shadow-sm px-4 py-2 bg-white dark:bg-gray-800 text-base font-medium text-gray-700 dark:text-gray-300 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-200 dark:focus:ring-gray-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Cancel</button>
       </div>
     </div>
   </div>
 </div>
-
