--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,162 +1,166 @@
-<div class="flex justify-center mt-4">
-  <button type="button" (click)="filterByLanguage(null)"
-    class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-    Todos
-  </button>
-  <button *ngFor="let language of programmingLanguages.data" type="button" (click)="filterByLanguage(language.id)"
-    class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-    {{ language.languageName }}
-  </button>
-  <button type="button" (click)="openPriceModal()"
-    class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-    Filtrar por precio
-  </button>
-  <button type="button" (click)="openZoneModal()"
-    class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
-    Filtrar por zona
-  </button>
+<div class="flex flex-col space-y-4">
+  <!-- Botones de filtro -->
+  <div class="flex flex-wrap justify-center mt-4 space-x-2 space-y-2 md:space-y-0 md:flex-nowrap overflow-auto">
+    <button type="button" (click)="filterByLanguage(null)"
+      class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+      All
+    </button>
+    <button *ngFor="let language of programmingLanguages.data" type="button" (click)="filterByLanguage(language.id)"
+      class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">
+      {{ language.languageName }}
+    </button>
+    <!-- Botón "Filtrar por precio" -->
+    <button type="button" (click)="openPriceModal()"
+      class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">
+      Filter by Price
+    </button>
 
-  <!-- Modal para filtrar por precio -->
-  <ng-container *ngIf="showPriceModal">
-    <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
-      <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-        <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-          <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
-        </div>
-        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-        <div
-          class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
-          <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-            <div class="sm:flex sm:items-start">
-              <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
-                  Filtrar por precio
-                </h3>
-                <div class="flex justify-between">
-                  <input type="number" [(ngModel)]="minPrice" placeholder="Precio mínimo"
-                    class="border rounded px-2 py-1 w-1/2 mr-2">
-                  <input type="number" [(ngModel)]="maxPrice" placeholder="Precio máximo"
-                    class="border rounded px-2 py-1 w-1/2">
-                </div>
-                <div class="flex justify-between mt-4">
-                  <button type="button" (click)="applyPriceFilter()"
-                    class="flex justify-center w-1/2 rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:w-auto sm:text-sm">
-                    Aplicar
-                  </button>
-                  <button type="button" (click)="closePriceModal()"
-                    class="flex justify-center w-1/2 rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:w-auto sm:text-sm">
-                    Cancelar
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </ng-container>
-
-  <!-- Modal para filtrar por zona -->
-  <ng-container *ngIf="showZoneModal">
-    <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
-      <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-        <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-          <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
-        </div>
-        <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-        <div
-          class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
-          <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-            <div class="sm:flex sm:items-start">
-              <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
-                  Filtrar por zona
-                </h3>
-                <div class="mt-2">
-                  <label for="citySelect" class="block text-sm font-medium text-gray-700">Selecciona una ciudad</label>
-                  <select id="citySelect" [(ngModel)]="selectedCity" class="border rounded px-2 py-1 w-full mt-1">
-                    <option *ngFor="let city of cities.data" [ngValue]="city.id">{{ city.name }}</option>
-                  </select>
-                </div>
-                <div class="flex justify-between mt-4">
-                  <button type="button" (click)="applyZoneFilter()"
-                    class="flex justify-center w-1/2 rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:w-auto sm:text-sm">
-                    Aplicar
-                  </button>
-                  <button type="button" (click)="closeZoneModal()"
-                    class="flex justify-center w-1/2 rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:w-auto sm:text-sm">
-                    Cancelar
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </ng-container>
-</div>
-
-<br>
-
-<div class="antialiased text-gray-900">
-  <div class="flex flex-wrap -mx-4">
-    <ng-container *ngFor="let advertisement of filteredAdvertisements">
-      <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/3 px-4 mb-8">
-        <div class="bg-white rounded-lg overflow-hidden shadow-2xl relative">
-          <!-- Agregamos el botón aquí -->
-          <button class="absolute top-0 right-0 m-4 bg-red-500 text-white px-2 py-1 rounded"
-            (click)="openForm(advertisement.id)">
-            <i class="fas fa-heart"></i> <!-- Ícono de corazón -->
-          </button>
-          <ng-container *ngFor="let user of users.data">
-            <div *ngIf="user.id === advertisement.user_id">
-              <a [routerLink]="['/advertisement', advertisement.id]" (click)="createCookie(advertisement.id)">
-                <img class="h-48 w-full object-cover object-end" src="{{user.img}}" alt="User Image" />
-                <!-- Resto del contenido omitido para mayor claridad -->
-              </a>
-              <div class="p-6">
-                <div class="flex items-baseline">
-                  <span
-                    class="inline-block bg-teal-200 text-teal-800 py-1 px-4 text-xs rounded-full uppercase font-semibold tracking-wide">
-                    <ng-container *ngFor="let language of programmingLanguages.data">
-                      <ng-container *ngIf="language.id === advertisement.programmingLanguage_id">
-                        {{ language.languageName }}
-                      </ng-container>
-                    </ng-container>
-                  </span>
-                  <ng-container *ngFor="let city of cities.data">
-                    <div *ngIf="city.id === user.city_id"
-                      class="ml-2 text-gray-600 text-xs uppercase font-semibold tracking-wide">
-                      {{ city.name }}
-                    </div>
-                  </ng-container>
-                </div>
-                <h4 class="mt-2 font-semibold text-lg leading-tight truncate">{{user.name}}</h4>
-                <div class="mt-1">
-                  <span>{{advertisement.price_hour}}€/h</span>
-                </div>
-                <div class="mt-2 flex items-center">
-                  <span class="text-teal-600 font-semibold">
-                    <span>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="far fa-star"></i>
-                    </span>
-                  </span>
-                </div>
-              </div>
-            </div>
-          </ng-container>
-        </div>
-      </div>
-    </ng-container>
+    <!-- Botón "Filtrar por zona" -->
+    <button type="button" (click)="openZoneModal()"
+      class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">
+      Filter by City
+    </button>
   </div>
-</div>
 
-<!-- Mueve este bloque de modal fuera del contenedor anterior -->
+  <!-- Lista de anuncios -->
+  <div class="antialiased text-gray-900 dark:text-gray-100">
+    <div class="flex flex-wrap -mx-2 md:-mx-4">
+      <ng-container *ngFor="let advertisement of filteredAdvertisements">
+        <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/3 xl:w-1/3 px-2 md:px-4 mb-4 md:mb-8">
+          <div class="bg-white dark:bg-gray-800 rounded-lg overflow-hidden shadow-2xl relative">
+            <button class="absolute top-0 right-0 m-4 bg-red-500 text-white px-2 py-1 rounded" (click)="openForm(advertisement.id)">
+              <i class="fas fa-heart"></i>
+            </button>
+            <ng-container *ngFor="let user of users.data">
+              <div *ngIf="user.id === advertisement.user_id">
+                <a [routerLink]="['/advertisement', advertisement.id]" (click)="createCookie(advertisement.id)">
+                  <img class="h-48 w-full object-cover object-end" src="{{user.img}}" alt="User Image" />
+                </a>
+                <div class="p-6">
+                  <div class="flex items-baseline">
+                    <span class="inline-block bg-teal-200 dark:bg-teal-900 text-teal-800 dark:text-teal-200 py-1 px-4 text-xs rounded-full uppercase font-semibold tracking-wide">
+                      <ng-container *ngFor="let language of programmingLanguages.data">
+                        <ng-container *ngIf="language.id === advertisement.programmingLanguage_id">
+                          {{ language.languageName }}
+                        </ng-container>
+                      </ng-container>
+                    </span>
+                    <ng-container *ngFor="let city of cities.data">
+                      <div *ngIf="city.id === user.city_id" class="ml-2 text-gray-600 dark:text-gray-400 text-xs uppercase font-semibold tracking-wide">
+                        {{ city.name }}
+                      </div>
+                    </ng-container>
+                  </div>
+                  <h4 class="mt-2 font-semibold text-lg leading-tight truncate dark:text-gray-100">{{user.name}}</h4>
+                  <div class="mt-1 text-gray-900 dark:text-gray-200">
+                    <span>{{advertisement.price_hour}}€/h</span>
+                  </div>
+                  <div class="mt-2 flex items-center text-teal-600 dark:text-teal-400 font-semibold">
+                    <span>
+                      <ng-container *ngFor="let star of [1, 2, 3, 4, 5]">
+                        <i class="fas" [ngClass]="{
+                          'fa-star text-yellow-500': star <= round(calculateAverageRating(advertisement.id)),
+                          'far fa-star text-yellow-500': star > round(calculateAverageRating(advertisement.id))
+                        }"></i>
+                      </ng-container>
+                    </span>
+                  </div>
+
+
+                </div>
+              </div>
+            </ng-container>
+          </div>
+        </div>
+      </ng-container>
+    </div>
+  </div>
+
+
+
+
+
+<!-- Modal para filtrar por precio -->
+<ng-container *ngIf="showPriceModal">
+  <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+    <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+      <div class="fixed inset-0 transition-opacity" aria-hidden="true">
+        <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+      </div>
+      <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+      <div
+        class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+        <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+          <div class="sm:flex sm:items-start">
+            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+              <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
+                Filtrar por precio
+              </h3>
+              <div class="flex justify-between">
+                <input type="number" [(ngModel)]="minPrice" placeholder="Precio mínimo"
+                  class="border rounded px-2 py-1 w-1/2 mr-2">
+                <input type="number" [(ngModel)]="maxPrice" placeholder="Precio máximo"
+                  class="border rounded px-2 py-1 w-1/2">
+              </div>
+              <div class="flex justify-between mt-4">
+                <button type="button" (click)="applyPriceFilter()"
+                  class="flex justify-center w-1/2 rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:w-auto sm:text-sm">
+                  Aplicar
+                </button>
+                <button type="button" (click)="closePriceModal()"
+                  class="flex justify-center w-1/2 rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:w-auto sm:text-sm">
+                  Cancelar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-container>
+
+<!-- Modal para filtrar por zona -->
+<ng-container *ngIf="showZoneModal">
+  <div class="fixed z-10 inset-0 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+    <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+      <div class="fixed inset-0 transition-opacity" aria-hidden="true">
+        <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+      </div>
+      <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+      <div
+        class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+        <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+          <div class="sm:flex sm:items-start">
+            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+              <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
+                Filtrar por zona
+              </h3>
+              <div class="mt-2">
+                <label for="citySelect" class="block text-sm font-medium text-gray-700">Selecciona una ciudad</label>
+                <select id="citySelect" [(ngModel)]="selectedCity" class="border rounded px-2 py-1 w-full mt-1">
+                  <option *ngFor="let city of cities.data" [ngValue]="city.id">{{ city.name }}</option>
+                </select>
+              </div>
+              <div class="flex justify-between mt-4">
+                <button type="button" (click)="applyZoneFilter()"
+                  class="flex justify-center w-1/2 rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:w-auto sm:text-sm">
+                  Aplicar
+                </button>
+                <button type="button" (click)="closeZoneModal()"
+                  class="flex justify-center w-1/2 rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:w-auto sm:text-sm">
+                  Cancelar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-container>
+
+<!-- Modal para agregar a lista de favoritos -->
 <div id="myModal" class="fixed inset-0 flex items-center justify-center" *ngIf="showModal">
   <div class="bg-gray-500 bg-opacity-75 fixed inset-0"></div>
   <div class="bg-white p-8 rounded-lg relative z-10">
