--- a/Frontend/src/app/components/payment/payment.component.html
+++ b/Frontend/src/app/components/payment/payment.component.html
@@ -2,24 +2,25 @@
   <div id="card-element" class="my-4 p-2 border rounded payment-element"></div>
   <button type="submit" class="payment-button">Pagar</button>
 </form>
+<!-- Modal de pago exitoso -->
 <div *ngIf="paymentSuccess" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50">
-  <div class="bg-white p-8 rounded-lg shadow-lg">
+  <div class="bg-white dark:bg-gray-800 p-8 rounded-lg shadow-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="text-lg font-semibold">Pago Exitoso</h3>
+        <h3 class="text-lg font-semibold dark:text-gray-200">Pago Exitoso</h3>
         <button (click)="closeModalAndRedirect()" class="absolute top-0 right-0 mt-2 mr-2">
-          <svg class="w-6 h-6 text-gray-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <svg class="w-6 h-6 text-gray-600 dark:text-gray-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
           </svg>
         </button>
       </div>
       <div class="modal-body">
-        <p class="text-gray-700">El pago se ha procesado correctamente. Por favor, escribe un mensaje al programador contratado:</p>
-        <textarea [(ngModel)]="messageToProgrammer" class="w-full h-32 mt-2 p-2 border border-gray-300 rounded"></textarea>
+        <p class="text-gray-700 dark:text-gray-300">El pago se ha procesado correctamente. Por favor, escribe un mensaje al programador contratado:</p>
+        <textarea [(ngModel)]="messageToProgrammer" class="w-full h-32 mt-2 p-2 border border-gray-300 rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-200"></textarea>
       </div>
       <div class="modal-footer">
-        <button (click)="sendMessageToProgrammer()" class="px-4 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600">Enviar Mensaje</button>
-        <button (click)="closeModalAndRedirect()" class="px-4 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600">Cancelar</button>
+        <button (click)="sendMessageToProgrammer()" class="px-4 py-2 bg-blue-500 text-white font-semibold rounded hover:bg-blue-600 dark:bg-blue-400 dark:hover:bg-blue-500">Enviar Mensaje</button>
+        <button (click)="closeModalAndRedirect()" class="px-4 py-2 bg-red-500 text-white font-semibold rounded hover:bg-red-600 dark:bg-red-400 dark:hover:bg-red-500">Cancelar</button>
       </div>
     </div>
   </div>
