--- a/Frontend/src/app/components/register/register.component.html
+++ b/Frontend/src/app/components/register/register.component.html
@@ -6,7 +6,7 @@
       class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
       <div class="max-w-md mx-auto bg-white shadow-md rounded-md p-6 dark:bg-gray-800">
         <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-          Unete a CodeMasterMentors
+          Join to CodeMasterMentors
         </h1>
         <form class="space-y-4 md:space-y-6" action="#" (ngSubmit)="onSubmit()">
           <!-- -------------------------------------------------------------------------------------- -->
