--- a/Frontend/src/app/components/user-management/user-management.component.html
+++ b/Frontend/src/app/components/user-management/user-management.component.html
@@ -19,7 +19,7 @@
           <td class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">{{ user.username }}</td>
           <td class="px-6 py-4">{{ user.email }}</td>
           <td class="px-6 py-4">{{ user.born_date }}</td>
-          <td class="px-6 py-4">{{ user.role_id }}</td>
+          <td class="px-6 py-4">{{getRoleName( user.role_id) }}</td>
           <td class="px-6 py-4">
             <a [routerLink]="['/editUser']" [queryParams]="{ userId: user.id }" class="ml-2">
               <button type="button"
